--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -122,6 +122,8 @@
               <a href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample">Convert To Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample">Supplier Po List</a>
               <a href="javascript:void(0)" [routerLink]="['/po/fitterPo']" id="collapseExample">Fitter Po</a>
+              <a href="javascript:void(0)" [routerLink]="['/po/fitterInvoice']" id="collapseExample">Fitter Invoice</a>
+              <a href="javascript:void(0)" [routerLink]="['/po/fitterInvoiceList']" id="collapseExample">Fitter Invoice List</a>
             </div>
           </div>
           <!-- companyadmin end Bliing -->
