--- a/web/src/app/po/fitter-po/fitter-po.component.css
+++ b/web/src/app/po/fitter-po/fitter-po.component.css
@@ -32,3 +32,20 @@
   font-size: 10px;
   color: #000;
 }
+
+.bcolor{
+  background-color:rgb(233, 39, 39) !important;
+  transform: 0.5ms !important;
+}
+
+
+.bcolor1{
+  background-color:rgb(233, 39, 39) !important;
+  transform: 0.5ms !important;
+
+}
+.bcolor2{
+  background-color:rgb(233, 39, 39) !important;
+  transform: 0.5ms !important;
+
+}
