--- a/web/src/app/inventory/fitter/fitter.component.html
+++ b/web/src/app/inventory/fitter/fitter.component.html
@@ -174,7 +174,7 @@
                                                 </div>
                                                 <div class="col-lg-4">
                                                     <mat-form-field class="example-full-width mb-0">
-                                                        <mat-label>Rate</mat-label>
+                                                        <mat-label>Rate <span style="color: red;">(Only For Half Pair Rate)</span> </mat-label>
                                                         <input matInput type="number" name="MobileNo2"
                                                             [(ngModel)]="rateCard.Rate" #MobileNo2control>
                                                         <mat-error>
