--- a/web/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -14,7 +14,7 @@
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Fitter</mat-label>
-                                        <mat-select name="supplier" [(ngModel)]="selectedMaster.FitterID"
+                                        <mat-select name="supplier" [(ngModel)]="FitterMaster.FitterID"
                                             [ngModelOptions]="{standalone: true}" >
                                             <mat-option *ngFor="let s of fitterList  let i = index;" value="{{s.ID}}" required>
                                                 {{s.Name}}
@@ -25,9 +25,9 @@
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Shop Name</mat-label>
-                                        <mat-select name="Supplier" editable="true" [(ngModel)]="selectedMaster.ShopID"
-                                            [ngModelOptions]="{standalone: true}" #singleSelect  required>
-                                            <mat-option [value]=0>All</mat-option>
+                                        <mat-select name="Supplier" editable="true" [(ngModel)]="FitterMaster.ShopID"
+                                            [ngModelOptions]="{standalone: true}" #singleSelect (selectionChange)="getParem()"  required>
+                                            <!-- <mat-option [value]=0>All</mat-option> -->
                                             <mat-option *ngFor="let sup of shopList  let i = index;" [value]="sup.ID">
                                                 {{sup.Name}} <span [style.color]="'blue'"
                                                     *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
@@ -35,14 +35,21 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-md-2 col-sm-12 mb-0">
+                                <div class="col-md-1 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>InvoiceNo</mat-label>
-                                        <input matInput name="InvoiceNo" [(ngModel)]="selectedMaster.InvoiceNo"
+                                        <input matInput name="InvoiceNo" [(ngModel)]="FitterMaster.InvoiceNo"
                                             #InvoiceNocontrol required>
                                         <mat-error>
                                             InvoiceNo required
                                         </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-2 col-md-2 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Invoice Date</mat-label>
+                                        <input matInput name="InvoiceDate" type="date" [(ngModel)]="FitterMaster.PurchaseDate"
+                                            [ngModelOptions]="{standalone: true}" required>
                                     </mat-form-field>
                                 </div>
                             </div>
@@ -50,7 +57,7 @@
                     </div>
 
                     <div class="body mt-2">
-                        <form  #f2="ngForm" >
+                        <form  #f2="ngForm" (ngSubmit)="onSubmit()">
                           <div class="row">
                               <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
                                   <table class="table table-striped table-hover table-sm table-bordered"
@@ -58,22 +65,42 @@
                                       <thead class="text-center">
                                           <tr>
                                               <th>
-                                                  <mat-checkbox class="example-margin" color="primary" ></mat-checkbox>
+                                                  <mat-checkbox class="example-margin" color="primary" (click)="multicheck()" ></mat-checkbox>
                                               </th>
                                               <th>SNo</th>
                                               <th>CustomerName</th>
                                               <th>MoblieNo</th>
                                               <th>InvoiceNo.</th>
+                                              <th>InvoiceDate</th>
                                               <th>ProductName</th>
                                               <th>LensType</th>
-                                              <th>RequestedDate</th>
+                                              <th>Option</th>
                                               <th>UnitPrice</th>
                                               <th>Quantity</th>
                                               <th>TotalAmt</th>
                                           </tr>
                                       </thead>
                                       <tbody class="text-center">
-                                          
+                                        <tr *ngFor="let f of dataList; let i = index;">
+                                            <td>
+                                                <input (click)="validate(f, $event)" type="checkbox" class="example-margin" id="{{f.ID}}"
+                                                [(ngModel)]="f.checked" color="primary" [checked]="f.Sel"
+                                                 name="feature{{f.ID}}"
+                                                value="{{f.Sel}}" style="width: 25px;
+                                                height: 17px; ">
+                                            </td>
+                                            <td>{{dataList.length - i}}</td>
+                                            <td>{{f.CustomerName}}</td>
+                                            <td>{{f.MobileNo}}</td>
+                                            <td>{{f.InvoiceNo}}</td>
+                                            <td>{{f.InvoiceDate}}</td>
+                                            <td>{{f.ProductName}}</td>
+                                            <td>{{f.LensType}}</td>
+                                            <td>{{(f.Option !== 'undefined')? f.Option: ''}}</td>
+                                            <td>{{f.FitterCost}}</td>
+                                            <td>{{f.Quantity}}</td>
+                                            <td>{{f.SubTotal}}</td>
+                                        </tr>
                                       </tbody>
                                   </table>
                               </div>
@@ -82,21 +109,57 @@
                               <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                   <mat-form-field class="example-full-width mb-0">
                                       <mat-label class="redColor">Quantity</mat-label>
-                                      <input class="redColor" matInput name="Quantity" [(ngModel)]="selectedMaster.Quantity"
+                                      <input class="redColor" matInput name="Quantity" [(ngModel)]="FitterMaster.Quantity"
                                           disabled #Quantitytcontrol [autocomplete]="false">
                                   </mat-form-field>
                               </div>
                               <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                   <mat-form-field class="example-full-width mb-0">
-                                      <mat-label class="redColor">Total Amount</mat-label>
-                                      <input class="redColor" matInput name="TotalAmountt"
-                                          [(ngModel)]="selectedMaster.TotalAmount" disabled
+                                      <mat-label class="redColor">SubTotal</mat-label>
+                                      <input class="redColor" matInput name="SubTotal"
+                                          [(ngModel)]="FitterMaster.SubTotal" disabled
                                           #TotalAmounttcontrol [autocomplete]="false">
                                   </mat-form-field>
                               </div>
+                              <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>GST%</mat-label>
+                                    <input matInput name="GSTPercentage" (change)="calculateGrandTotal()" [(ngModel)]="FitterMaster.GSTPercentage" required
+                                        #GSTcontrol [autocomplete]="false">
+                                    <mat-error>
+                                        GST is required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label class="redColor">GST Amt</mat-label>
+                                    <input class="redColor" matInput name="GSTAmt" [(ngModel)]="FitterMaster.GSTAmount" required
+                                        #GSTAmtcontrol [autocomplete]="false" disabled>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>GST Type</mat-label>
+                                    <mat-select name="GSTType" [(ngModel)]="FitterMaster.GSTType" required
+                                        #GSTTypecontrol1 >
+                                        <mat-option  value="None" >None</mat-option>
+                                            <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
+                                            </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label class="redColor">Total Amount</mat-label>
+                                    <input class="redColor" matInput name="TotalAmountt"
+                                        [(ngModel)]="FitterMaster.TotalAmount" disabled
+                                        #TotalAmounttcontrol [autocomplete]="false">
+                                </mat-form-field>
+                            </div>
                               <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 mb-0 ms-auto p-0">
-                                  <button type="button"  class="mr-3" mat-raised-button
-                                      color="primary">
+                                  <button type="button" [disabled]=""  class="mr-3" mat-raised-button
+                                      color="primary" (click)="calculateGrandTotal()">
                                       Calculate Invoice
                                   </button>
                                   <button type="submit" [disabled]="!f.valid "
