--- a/web/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -75,7 +75,7 @@
                                               <th>ProductName</th>
                                               <th>LensType</th>
                                               <th>Option</th>
-                                              <th>UnitPrice</th>
+                                              <th>FitterPrice</th>
                                               <th>Quantity</th>
                                               <th>TotalAmt</th>
                                           </tr>
@@ -164,7 +164,7 @@
                                   </button>
                                   <button type="submit" [disabled]="!f.valid "
                                       class="ms-3" mat-raised-button color="primary">
-                                      Save PO
+                                      Save
                                   </button>
                               </div>
                           </div> 
