--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -714,7 +714,7 @@
                      <button type="button" class=" me-3" mat-raised-button color="primary" 
                      [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Lens Order</button>
                      <button type="button" class=" me-3" mat-raised-button color="primary" 
-                     [disabled]="BillMaster.ID === null" >Fitter Order</button>
+                     [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
                     <button type="button" mat-raised-button color="primary">Receipt</button>
                     <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Receipt +
                         Power</button>
@@ -1079,6 +1079,105 @@
                         </td>
                     </tr>
                   </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+    </div>
+  </ng-template>
+
+<!-- fitter order -->
+<ng-template #content13 role="document" let-modal>
+    <div class="modal-header"  style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Fitter Order</h3>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <div class="row mt-2">
+            <div class="col-md-3">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Select Fitter</mat-label>
+                    <mat-select name="Fitter" [(ngModel)]="data.FitterID" [ngModelOptions]="{standalone: true}"  (selectionChange)="getRateCard()">
+                        <!-- <mat-option value="All">All</mat-option> -->
+                        <mat-option *ngFor="let f of fitterList  let i = index;" value="{{f.ID}}">
+                            {{f.Name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-md-4">
+                <button  class="ms-2" type="button" mat-raised-button color="primary" (click)="assignFitterPo()">
+                    Assign
+                </button>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-sm-12 ">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover table-sm table-bordered"
+                  style="border: 2px solid #fff !important;">
+                  <thead class="text-center">
+                    <tr>
+                        <th>
+                            <mat-checkbox class="example-margin" color="primary"
+                            (click)="multicheck()" ></mat-checkbox>
+                        </th>
+                        <th>SNo</th>
+                        <!-- <th>MRDNo</th>
+                        <th>CustomerName</th>
+                        <th>MobileNo</th>
+                        <th>InvoiceDate</th>
+                        <th>DeliveryDate</th>
+                        <th>InvoiceNo</th> -->
+                        <th>ProductName</th>
+                        <th>Qty</th>
+                        <th>Option</th>
+                        <!-- <th>FitterStatus</th> -->
+                        <th>LensType</th>
+                        <th>Remark</th>
+                        <th>ShopName</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let v of orderList; let i = index;">
+                        <td>
+                            <input type="checkbox" class="example-margin" id="{{v.ID}}"
+                                [(ngModel)]="v.checked" color="primary" [checked]="v.Sel"
+                                (click)="validate(v, $event)" name="feature{{v.ID}}"
+                                value="{{v.Sel}}" style="width: 20px; height: 16px;  z-index: 999 !important;
+                                position: relative !important; ">
+                        </td>
+                        <td>{{orderList.length - i}}</td>
+                        <!-- <td>{{v.MRDNo}}</td>
+                        <td>{{v.CustomerName}}</td>
+                        <td>{{v.MobileNo1}}</td>
+                        <td>{{v.InvoiceDate}}</td>
+                        <td>{{v.DeliveryDate }}</td>
+                        <td>{{v.InvoiceNo}}</td> -->
+                        <td>{{v.ProductName}}</td>
+                        <td>{{v.Quantity}}</td>
+                        <td>{{(v.Option !== 'undefined' && v.Option !== 'null')? v.Option: ''}}</td>
+                        <!-- <td> {{(v.FitterStatus !== 'initiate')? v.FitterStatus: ''}}</td> -->
+                        <td>
+                            <select  [disabled]="v.FitterStatus !== 'initiate'"  [ngClass]="{'borderLens': v.ProductTypeName === 'LENS'}" class="inputselectWidth"
+                            name="LensType{{v.ID}}" [(ngModel)]="v.LensType" #LensTypeControl
+                                required  >
+                                <option value="NO">None</option>
+                                <option  [value]="l.Name" *ngFor="let l of lensList" required >
+                                    {{l.Name}}
+                                </option>
+                            </select>
+                        </td>
+                        <td>
+                            <input class="inputWidth" name="Remark{{v.ID}}"
+                                [(ngModel)]="v.Remark" #Remarkcontrol [autocomplete]="false"
+                                [disabled]="v.Sel !== 1">
+                        </td>
+                        <td>{{v.ShopName}}<span [style.color]="'blue'"
+                                *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span>
+                        </td>
+                    </tr>
+                </tbody>
                 </table>
               </div>
             </div>
