--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -93,7 +93,6 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample">Product Transfer</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/inventory-summary']" id="collapseExample">Product Summary</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
-              <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/preOrderList']" id="collapseExample">Pre-Order</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/dummyPreorderList']" id="collapseExample">Dummy List</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/purchase-returnList']" id="collapseExample">Purchase Return</a>
@@ -121,9 +120,10 @@
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample">Supplier Po</a>
               <a href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample">Convert To Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample">Supplier Po List</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
               <a href="javascript:void(0)" [routerLink]="['/po/fitterPo']" id="collapseExample">Fitter Po</a>
               <a href="javascript:void(0)" [routerLink]="['/po/fitterInvoice']" id="collapseExample">Fitter Invoice</a>
-              <a href="javascript:void(0)" [routerLink]="['/po/fitterInvoiceList']" id="collapseExample">Fitter Invoice List</a>
+              <a href="javascript:void(0)" [routerLink]="['/po/fitterInvoiceList',0]" id="collapseExample">Fitter Invoice List</a>
             </div>
           </div>
           <!-- companyadmin end Bliing -->
