--- a/web/src/app/po/fitter-invoice-detail/fitter-invoice-detail.component.html
+++ b/web/src/app/po/fitter-invoice-detail/fitter-invoice-detail.component.html
@@ -7,7 +7,7 @@
                     <div class="header">
                         <div class="row">
                             <div class="col-lg-2 col-6">
-                                <h2>Fitter Detail <button class="pdf"  >
+                                <h2>Fitter Detail <button class="pdf">
                                         <i class="far fa-file-pdf "
                                             style="color: #ffffff;font-size: 20px;cursor: pointer;"> </i>
                                     </button></h2>
@@ -16,110 +16,102 @@
                     </div>
                     <div class="body">
                         <!-- save invoice start -->
-                        <form #f1="ngForm" autocomplete="off" >
+                        <form #f1="ngForm" autocomplete="off">
                             <div class="row">
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>Select Fitter</mat-label>
-                                    <mat-select name="Fitter" (selectionChange)="getFitterDetails($event)" [(ngModel)]="FitterMaster.FitterName"
-                                        [ngModelOptions]="{standalone: true}" disabled>
-                                        <mat-option [value]="f.Name"  *ngFor="let f of fitterList  let i = index;"  required>
-                                            {{f.Name}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Fitter Name</mat-label>
+                                            <input matInput name="Fitter" disabled [(ngModel)]="FitterMaster.CustomerName" #FitterNamecontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-1 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Invoice Number</mat-label>
+                                        <input matInput name="InvoiceNo" [(ngModel)]="FitterMaster.InvoiceNo"
+                                            #InvoiceNocontrol required disabled>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-2 col-md-2 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Invoice Date</mat-label>
+                                        <input matInput name="InvoiceDate" type="date"
+                                            [(ngModel)]="FitterMaster.PurchaseDate"
+                                            [ngModelOptions]="{standalone: true}" disabled required>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-1 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Payment Status</mat-label>
+                                        <input matInput name="PaymentStatus" [(ngModel)]="FitterMaster.PaymentStatus"
+                                            #InvoiceNocontrol required disabled>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-1 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Total Quantity</mat-label>
+                                        <input matInput name="Quantity" [(ngModel)]="FitterMaster.Quantity"
+                                            #InvoiceNocontrol required disabled>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-1 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Invoice Amount </mat-label>
+                                        <input matInput name="TotalAmount" [(ngModel)]="FitterMaster.TotalAmount"
+                                            #InvoiceNocontrol required disabled>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-1 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Due Amount</mat-label>
+                                        <input matInput name="DueAmount" [(ngModel)]="FitterMaster.DueAmount"
+                                            #InvoiceNocontrol required disabled>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Shop Name</mat-label>
+                                        <input matInput name="ShopName" disabled [(ngModel)]="FitterMaster.ShopName" #ShopNamecontrol>
+                                    </mat-form-field>
+                                </div>
                             </div>
-                            <div class="col-md-1 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>InvoiceNo</mat-label>
-                                    <input matInput name="InvoiceNo" [(ngModel)]="FitterMaster.InvoiceNo"
-                                        #InvoiceNocontrol required disabled>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-xl-1 col-lg-2 col-md-2 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>Invoice Date</mat-label>
-                                    <input matInput name="InvoiceDate" type="date" [(ngModel)]="FitterMaster.PurchaseDate"
-                                        [ngModelOptions]="{standalone: true}" disabled required>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-1 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>PaymentStatus</mat-label>
-                                    <input matInput name="PaymentStatus" [(ngModel)]="FitterMaster.PaymentStatus"
-                                        #InvoiceNocontrol required disabled>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-1 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>Quantity</mat-label>
-                                    <input matInput name="Quantity" [(ngModel)]="FitterMaster.Quantity"
-                                        #InvoiceNocontrol required disabled>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-1 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>Invoice Amount </mat-label>
-                                    <input matInput name="TotalAmount" [(ngModel)]="FitterMaster.TotalAmount"
-                                        #InvoiceNocontrol required disabled>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-1 col-sm-12 mb-0">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>DueAmount</mat-label>
-                                    <input matInput name="DueAmount" [(ngModel)]="FitterMaster.DueAmount"
-                                        #InvoiceNocontrol required disabled>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
-                                <mat-form-field class="example-full-width mb-0">
-                                    <mat-label>Shop Name</mat-label>
-                                    <mat-select name="Supplier" editable="true" [(ngModel)]="FitterMaster.ShopID"
-                                        [ngModelOptions]="{standalone: true}" #singleSelect disabled required>
-                                        <!-- <mat-option [value]=0>All</mat-option> -->
-                                        <mat-option *ngFor="let sup of shopList  let i = index;" [value]="sup.ID">
-                                            {{sup.Name}} <span [style.color]="'blue'"
-                                                *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                        </div>
                         </form>
                         <!-- save invoice end -->
                         <div class="body mt-2">
-                            <form  #f2="ngForm" >
-                              <div class="row">
-                                  <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
-                                      <table class="table table-striped table-hover table-sm table-bordered"
-                                          style="border: 2px solid #fff !important; ">
-                                          <thead class="text-center">
-                                              <tr>
-                                                <th>Action</th>
-                                                <th>S.No</th>
-                                                <th>Fitter Name</th>
-                                                <th>MoblieNo</th>
-                                                <th>Invoice No</th>
-                                                <th>Received At</th>
-                                                <th>Purchase Date</th>
-                                                <th>Payment Status</th>
-                                                <th>Invoice Amount</th>
-                                                <th>ShopName</th>
-                                              </tr>
-                                          </thead>
-                                          <tbody class="text-center">
-                                               
-                                          </tbody>
-                                      </table>
-                                  </div>
-                              </div>
-                             
+                            <form #f2="ngForm">
+                                <div class="row">
+                                    <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
+                                        <table class="table table-striped table-hover table-sm table-bordered"
+                                            style="border: 2px solid #fff !important; ">
+                                            <thead class="text-center">
+                                                <tr class="text-center">
+                                                    <th>Sno.</th>
+                                                    <th>Product Name</th>
+                                                    <th>Lens Type</th>
+                                                    <th>Requested Date</th>
+                                                    <th>UnitPrice</th>
+                                                    <th>Quantity</th>
+                                                    <th>TotalAmt</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr class="text-center" *ngFor="let item of dataList ; let i = index;">
+                                                    <td>{{dataList.length - i}}</td>
+                                                    <td>{{item.ProductName}}</td>
+                                                    <td>{{item.LensType}}</td>
+                                                    <td>{{item.AssignedOn | date:'dd-MM-y'}}</td>
+                                                    <td>{{item.UnitPrice}}</td>
+                                                    <td>{{item.Quantity}}</td>
+                                                    <td>{{item.TotalAmount}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </form>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
