--- a/web/src/app/admin/shop-list/shop-list.component.css
+++ b/web/src/app/admin/shop-list/shop-list.component.css
@@ -23,3 +23,9 @@
     padding: 0;
     height: 35px;
   }
+
+  .bcolor{
+    text-decoration: line-through;
+    color:rgb(233, 36, 36) !important;
+    transform: 0.5ms !important;
+}
