--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -84,21 +84,23 @@
                                 style="border: 2px solid #fff !important;">
                                 <thead class="thead-light" style="width:100%;">
                                     <tr>
-                                        <th class="text-left">Action</th>
-                                        <th class="text-left">S.No</th>
-                                        <th class="text-left">SupplierName</th>
-                                        <th class="text-left">MobileNo</th>
-                                        <th class="text-left">GSTType</th>
-                                        <th class="text-left">GST/VAT NO.</th>
-                                        <th class="text-left">Address</th>
-                                        <th class="text-left">PhoneNo</th>
-                                        <th class="text-left">Email</th>
-                                        <th class="text-left">ContactPerson</th>
-                                        <th class="text-left">CreatedBy</th>
-                                        <th class="text-left">UpdatedBy</th>
+                                        <th>Action</th>
+                                        <th>S.No</th>
+                                        <th>PartyCode</th>
+                                        <th>SupplierName</th>
+                                        <th>MobileNo</th>
+                                        <th>MobileNo2</th>
+                                        <th>PhoneNo</th>
+                                        <th>Address</th>
+                                        <th>Email</th>
+                                        <th>GSTType</th>
+                                        <th>GST/VAT NO.</th>
+                                        <th>ContactPerson</th>
+                                        <th>CreatedBy</th>
+                                        <th>UpdatedBy</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody class="text-center">
                                     <tr *ngFor="let data of dataList  let i = index;">
                                         <td style="width: 7%;">
                                             <button class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
@@ -108,18 +110,19 @@
                                               <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                             </button>
                                         </td>
-                                        <td class="text-center">{{ dataList.length - i }}</td>
-                                        <td class="text-center">{{data.Name}}</td>
-                                        <td class="text-center">{{data.MobileNo1}}</td>
-                                        <td class="text-center">{{data.MobileNo2}}</td>
-                                        <td class="text-center">{{data.GSTType}}</td>
-                                        <td class="text-center">{{data.GSTNo}}</td>
-                                        <td class="text-center">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
-                                        <td class="text-center">{{(data.Email !== 'null')? data.Email: ''}}</td>
-                                        <td class="text-center">{{data.Address}}</td>
-                                        <td class="text-center">{{(data.ContactPerson !== 'null')? data.ContactPerson:''}}</td>
-                                        <td class="text-left"> {{data.CreatedPerson}} </td>
-                                        <td class="text-left"> {{data.UpdatedPerson}} </td>
+                                        <td>{{ dataList.length - i }}</td>
+                                        <td>{{data.Sno}}</td>
+                                        <td>{{data.Name}}</td>
+                                        <td>{{data.MobileNo1}}</td>
+                                        <td>{{data.MobileNo2}}</td>
+                                        <td>{{(data.PhoneNo !== 'undefined')? data.PhoneNo: ''}}</td>
+                                        <td>{{data.Address}}</td>
+                                        <td>{{(data.Email !== 'undefined')? data.Email: ''}}</td>
+                                        <td>{{(data.GSTType !== "undefined")? data.GSTType:''}}</td>
+                                        <td>{{data.GSTNo}}</td>
+                                        <td>{{(data.ContactPerson !== "undefined")? data.ContactPerson:''}}</td>
+                                        <td>{{data.CreatedPerson}} </td>
+                                        <td>{{data.UpdatedPerson}} </td>
                                     </tr>
                                 </tbody>
                             </table>
